--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -5,6 +7,9 @@
 }
 html{
     font-size: 14px;
+}
+body{
+    font-family: 'Roboto', sans-serif;
 }
 #container{
     max-width: 1200px;
@@ -18,12 +23,17 @@ html{
     padding: 5px 0 ;
 }
 #content .news{
-     padding: 10px;
      max-width: 49.999%;
      float: left;
      text-align: justify;
      line-height: 1.5;
      font-size: .8rem;
+}
+#content .news:first-child{
+    padding-right:  10px;
+}
+#content .news:nth-child(2){
+    padding-right: 10px;
 }
 #content::after,#nav ul::after{
     content: "";
@@ -38,6 +48,9 @@ html{
     float:left;
     text-align: center;
     border-right: 1px dotted black;
+}
+#nav ul li:last-child{
+    border-right: none;
 }
 #nav ul li a{
     background: orange;
